# 706Face

./: .gitignore  LICENSE  README.md
CAD/: Radio End connector.FCStd
PCBs/Pogo Targets/: Pogo Targets.kicad_pcb  Pogo Targets.kicad_pro  Pogo Targets.kicad_sch
STLs/: Radio End connector-Board Mount.stl  Radio End connector-Bottom Plate.stl  Radio End connector-Clip Plate.stl  Radio End connector-Latch.stl  Radio End connector-Pass-through Plate.stl  Radio End connector-Top Dress Plate.stl
docs/: Cable.md  Parts.md  Pico Connections.md  Protocol.md
reng/: CMakeLists.txt  README.md  reng.c
src/: 706Face.c  CMakeLists.txt  HeadUnitProtocol.h  HeadUnitState.h
